# jet-ML-study

./: .env  .gitignore  load_data.py  main.py  pyproject.toml
torchmodel/src/torchmodel/: torchmodel.py
